--- a/E-class/e-commerce-backend/src/main/resources/application.properties
+++ b/E-class/e-commerce-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=studen-management-backend
+spring.application.name=shoe-management-backend
 # 1. C?u hình SERVER
 server.port=8080
 server.servlet.context-path=/api
 # 2. C?u Hình DATABASE (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5433/stm
+spring.datasource.url=jdbc:postgresql://localhost:5433/shoe-shop
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
