--- a/E-class/e-commerce-frontend/.gitignore
+++ b/E-class/e-commerce-frontend/.gitignore
@@ -24,3 +24,7 @@ dist-ssr
 *.sw?
 E-class/e-commerce-backend/src/main/resources/static/image/
 E-class/e-commerce-backend/uploads/
+# user uploaded files
+uploads/
+public/uploads/
+storage/
