--- a/E-class/e-commerce-frontend/.gitignore
+++ b/E-class/e-commerce-frontend/.gitignore
@@ -22,5 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-E-class/e-commerce-backend/src/main/resources/static/image/
+# user uploaded files
 E-class/e-commerce-backend/uploads/
+E-class/e-commerce-backend/src/main/resources/static/image/
+uploads/
+public/uploads/
+storage/
