--- a/E-class/e-commerce-backend/src/main/resources/application.properties
+++ b/E-class/e-commerce-backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=shoe-management-backend
 server.port=8080
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shoe_shop
+spring.datasource.url=jdbc:postgresql://localhost:5433/shoe-shop
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
