--- a/E-class/e-commerce-backend/src/main/resources/application.properties
+++ b/E-class/e-commerce-backend/src/main/resources/application.properties
@@ -3,15 +3,14 @@ spring.application.name=shoe-management-backend
 server.port=8080
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/shoe-shop
+spring.datasource.url=jdbc:postgresql://localhost:5432/shoe_shop
 spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=123456
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
